# FlowLauncherPlugin-upsetGalgame

./: .gitignore  main.py  plugin.json  pyproject.toml  requirements.txt
.github/workflow/: Publish Release.yaml
.github/workflows/: Publish Release.yaml
src/: plugin.py
